RESOLVED FIXED215005
[GTK][WPE][WebRTC] webrtc/h264-baseline.html is crashing since added in r265005
https://bugs.webkit.org/show_bug.cgi?id=215005
Summary [GTK][WPE][WebRTC] webrtc/h264-baseline.html is crashing since added in r265005
Lauro Moura
Reported 2020-07-30 21:09:12 PDT
* webrtc/h264-baseline.html It is crashing in the WebProcess since added in r265005. Stderr from debug run: crash log for WebKitTestRunner (pid 8249): STDERR: (used_ids.h:55): Duplicate id found. Reassigning from 1 to 14 STDERR: (used_ids.h:55): Duplicate id found. Reassigning from 3 to 13 STDERR: (used_ids.h:55): Duplicate id found. Reassigning from 5 to 12 STDERR: (used_ids.h:55): Duplicate id found. Reassigning from 6 to 11 STDERR: (webrtc_video_engine.cc:3160): Absent receive stream; ignoring clearing encoded frame sink for ssrc 0 STDERR: (webrtc_video_engine.cc:2008): RTX SSRCs configured but there's no configured RTX payload type. Ignoring. STDERR: (balanced_degradation_settings.cc:96): Unsupported size, value ignored. STDERR: (video_send_stream_impl.cc:243): ERROR: Initial encoder max bitrate = -1 which is <= 0! STDERR: (video_stream_encoder.cc:1274): Failed to encode frame. Error code: -1 STDERR: (video_receive_stream.cc:721): No decodable frame in 200 ms, requesting keyframe. STDERR: STDERR: STDERR: # STDERR: # Fatal error in: ../../Source/ThirdParty/libwebrtc/Source/webrtc/modules/rtp_rtcp/source/rtp_format_h264.cc, line 189 STDERR: # last system error: 110 STDERR: # Check failed: fragment.size() > 0 (0 vs. 0) STDERR: # #CRASHED - WebKitWebProcess (pid 8316) STDERR: LEAK: 1 WebProcessPool STDERR: LEAK: 1 WebPageProxy Crashes always happens when "counter" reaches 7 in waitForVideoSize, otherwise just rejects as failure. Maybe because some cleanup timer trigger a process crash instead of an actual crash?
Attachments
Philippe Normand
Comment 1 2023-09-08 04:36:50 PDT
EWS
Comment 2 2024-02-16 02:17:24 PST
Committed 274812@main (70f7bbc27299): <https://commits.webkit.org/274812@main> Reviewed commits have been landed. Closing PR #17589 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-16 02:18:15 PST
Note You need to log in before you can comment on or make changes to this bug.