Source/WebCore/platform/mediastream/gstreamer/GStreamerVideoCapturer.cpp
@@ -124,7 +124,7 @@ GstElement* GStreamerVideoCapturer::createConverter()
     return bin;
 }
 
-bool GStreamerVideoCapturer::setSize(int width, int height)
+bool GStreamerVideoCapturer::setSize(const IntSize& size)
 {
     if (isCapturingDisplay()) {
         // Pipewiresrc doesn't seem to support caps re-negotiation and framerate configuration properly.
@@ -132,6 +132,8 @@ bool GStreamerVideoCapturer::setSize(int width, int height)
         return true;
     }
 
+    int width = size.width();
+    int height = size.height();
     if (!width || !height)
         return false;
 
@@ -141,12 +143,13 @@ bool GStreamerVideoCapturer::setSize(int width, int height)
         return true;
     }
 
+    if (UNLIKELY(!m_capsfilter))
+        return false;
+
     GST_INFO_OBJECT(m_pipeline.get(), "Setting size to %dx%d", width, height);
+    m_size = size;
     m_caps = adoptGRef(gst_caps_copy(m_caps.get()));
     gst_caps_set_simple(m_caps.get(), "width", G_TYPE_INT, width, "height", G_TYPE_INT, height, nullptr);
-
-    if (!m_capsfilter)
-        return false;
 
     g_object_set(m_capsfilter.get(), "caps", m_caps.get(), nullptr);
     return true;
@@ -161,7 +164,6 @@ bool GStreamerVideoCapturer::setFrameRate(double frameRate)
     }
 
     int numerator, denominator;
-
     gst_util_double_to_fraction(frameRate, &numerator, &denominator);
 
     if (numerator < -G_MAXINT) {
@@ -174,15 +176,14 @@ bool GStreamerVideoCapturer::setFrameRate(double frameRate)
         return false;
     }
 
+    if (UNLIKELY(!m_capsfilter))
+        return false;
+
     m_caps = adoptGRef(gst_caps_copy(m_caps.get()));
     gst_caps_set_simple(m_caps.get(), "framerate", GST_TYPE_FRACTION, numerator, denominator, nullptr);
 
-    if (!m_capsfilter)
-        return false;
-
     GST_INFO_OBJECT(m_pipeline.get(), "Setting framerate to %f fps", frameRate);
     g_object_set(m_capsfilter.get(), "caps", m_caps.get(), nullptr);
-
     return true;
 }
 
